--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
                     <a class="nav-link" href="#section-3">Lack of oxygen</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#section-4">Facts</a>
+                    <a class="nav-link" href="#section-4">Vaccinations</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#section-5">Facts</a>
                 </li>
             </ul>
         </div>
@@ -176,9 +179,28 @@
         </section>
     </div>
 
+    <div class="w3-row-padding w3-padding-64 w3-container">
+        <section id="section-4">
+        <div class="w3-content">
+            <div class="w3-third">
+                <h2> Bed availibility in different states</h2>
+
+                <p class="w3-text-grey"> This visualisation shows the availibility of beds in different states during this duration,
+                as it supports the previous section regarding the deaths caused due to oxygen shortage and ICU bed issues. 
+                These numbers may look sufficient, however, they were not ideal for the population density of the states, 
+                which meant, for every 10 people, there were 0.0n number of beds available</p>
+            </div>
+
+            <div class="w3-twothird">
+                <div id="barchart"></div>
+            </div>
+        </div>
+        </section>
+    </div>
+
 
     <div id="facts">
-        <section id="section-4">
+        <section id="section-5">
         <div class = "facts">
             <div  class="title" style="text-align: center">
                 <h2>Additional facts about Covid-19 in India</h2>
