--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
                 <div id="linechart"></div>
             </div>
 
+            <div class="w3-threethird">
+                <div id="heatmap"></div>
+            </div>
+
     
     </section>
     </div>
